--- a/RESTServer/web/index.html
+++ b/RESTServer/web/index.html
@@ -40,7 +40,7 @@
 
 		function getGenres() {
 			$.ajax({
-				type: "POST",
+				type: "GET",
 				url: "http://localhost:8090/getGenres",
 				async: true,
 				beforeSend: function (xhr){ 
