--- a/RESTServer/web/index.html
+++ b/RESTServer/web/index.html
@@ -147,10 +147,36 @@
             });
         }
 
+		function performSearch() {
+			//var data = {"query" : "series comedy action sci-fi jim parsons"};
+            //var data = {"query" : "genre comedy action adventure jim parsons"};
+            var data = {"query" : "actor jim parsons"};
+
+
+            $.ajax({
+                type: "POST",
+                url: "http://localhost:8090/search",
+                data: JSON.stringify(data),
+                async: true,
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Content-Type", "application/json");
+                    xhr.setRequestHeader("Accept", "application/json")
+                },
+                success: function (data) {
+                    console.log("Got data");
+                },
+                error: function (jqXHR, exception) {
+                    console.log(jqXHR.status);
+                    console.log(exception);
+                }
+            });
+		}
+
 		$(document).ready(function() {
 			//getGenres();
-			getSeriesInfo();
+			// getSeriesInfo();
 			// getPersonInfo();
+			performSearch();
 		});
 
 	</script>
