--- a/RESTServer/web/index.html
+++ b/RESTServer/web/index.html
@@ -25,6 +25,10 @@
                     for (var i=0; i < series.length; i++) {
                         console.log("Got series: " + series[i][0] + " " + series[i][1] +  " " + series[i][2]);
                     }
+
+                    var people = data["people"];
+
+                    console.log("Got " + people.length);
                 },
                 error: function(jqXHR, exception) {
                     console.log(jqXHR.status);
