--- a/RESTServer/web/index.html
+++ b/RESTServer/web/index.html
@@ -18,17 +18,20 @@
                     xhr.setRequestHeader("Accept", "application/json")
                 },
                 success: function(data) {
-                    console.log("Got data " + data);
 
                     var series = data["series"];
+                    console.log("Got " + series.length + " series");
 
                     for (var i=0; i < series.length; i++) {
                         console.log("Got series: " + series[i][0] + " " + series[i][1] +  " " + series[i][2]);
                     }
 
                     var people = data["people"];
+                    console.log("Got " + people.length + " people");
 
-                    console.log("Got " + people.length);
+                    for (i=0; i < people.length; i++) {
+                        console.log("Got series: " + people[i][0] + " " + people[i][1] +  " " + people[i][2]);
+                    }
                 },
                 error: function(jqXHR, exception) {
                     console.log(jqXHR.status);
