First version of the recommendation

--- a/RESTServer/web/index.html
+++ b/RESTServer/web/index.html
@@ -30,7 +30,7 @@
                     console.log("Got " + people.length + " people");
 
                     for (i=0; i < people.length; i++) {
-                        console.log("Got series: " + people[i][0] + " " + people[i][1] +  " " + people[i][2]);
+                        console.log("Got person: " + people[i][0] + " " + people[i][1] +  " " + people[i][2]);
                     }
                 },
                 error: function(jqXHR, exception) {
